Fixed some issue with large screen device overflow

--- a/source/css/styles.css
+++ b/source/css/styles.css
@@ -61,6 +61,11 @@
 
 * {
     font-family: 'Josefin Sans', sans-serif;
+    overflow-x: hidden;
+}
+
+.card {
+    overflow: hidden;
 }
 
 .logo-title {
